# mlops-project-codehub

./: .coverage  .dockerignore  .env.smoke.template  .gitignore  Dockerfile  Makefile  README.md  README_new.md  alembic.ini  docker-compose.db.yml  docker-compose.debug.yml  docker-compose.yml  dockerfile  gunicorn_conf.py  init_db.py  pyproject.toml  test.py  test_demo.py
.agent/: project_context.md
.agent/workflows/: dev-rules.md
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
alembic/: env.py
alembic/archive_versions/: 2026_01_29_2347-f78d6405c550_add_2_file_talbe.py
alembic/versions/: 2026_01_04_0041-93e33503f942_initial_schema.py  2026_01_08_1855-dbeec23fd8e2_change_id_to_ulid.py  2026_01_08_2237-c10897ad7ae7_change_id_to_ulid.py  2026_01_24_0852-59224dd0c6f4_重构user表.py  2026_01_26_2117-7e69ae88028d_把表从sqlmodel转为sqlalchemy.py  2026_01_27_0027-bbbe93107bec_.py  2026_01_27_0029-6ee8ee3e6611_.py  2026_01_29_2335-5555ce1e4908_add_2_file_talbes.py  2026_02_06_0016-a4cf886d797c_initial_schema_after_sqlmodel_removal.py  2026_02_06_0029-94c6e33aa78f_user_and_baseid_update.py  2026_02_10_2025-bef7eff16f62_base_table.py  2026_02_28_2312-2207686616a6_add_token.py  2026_03_09_2128-678e5c0abf31_table_structure_fine_tuning.py  2026_04_25_1530-9d7c2a1f8b64_add_workspace_permissions_audit.py  2026_04_30_1200-4f7c9b2d1a3e_add_file_storage_metadata.py  2026_05_01_1100-a8c4d3e9f021_add_upload_hash_metadata.py
app/: main.py
app/api/: dependencies.py  deps.py  params.py
app/api/v1/: api.py
app/core/: config.py  database.py  docling_models.py  exceptions.py  logger.py  middlewares.py  security.py
app/crud/: user.py
app/domain/: interfaces.py
app/models/: __init__.py  user.py
app/models/orm/: base.py  user.py  (+1 more)
app/repositories/: base.py  knowledge.py  user_repo.py
app/schemas/: user.py
app/services/: base.py  ingestion.py  unit_of_work.py  user_auth_service.py  user_import_service.py  user_service.py
app/ui/: chainlit_app.py
app/utils/: decorators.py  file_parser.py  validators.py
backend/: gunicorn_conf.py  main.py
backend/ai/: __init__.py
backend/api/: dependencies.py  params.py
backend/config/: __init__.py  embedding.py  llm.py  loader.py  permissions.py  prompts.py  schemas.py  settings.py
backend/core/: circuit_breaker.py  concurrency.py  config.py  database.py  docling_models.py  exceptions.py  logger.py  middlewares.py  redis.py  secret_env.py  security.py  task_broker.py  telemetry.py  trace_utils.py
backend/domain/: interfaces.py
backend/infra/: database.py  redis.py  task_broker.py
backend/middleware/: rate_limit.py  tracing.py
backend/observability/: telemetry.py
backend/repositories/: access_repo.py  base.py  chat_repo.py  knowledge.py  knowledge_repo.py  task_repo.py  user_repo.py
backend/services/: audit_service.py  base.py  chat_service.py  chunking_service.py  ingestion.py  knowledge_service.py  knowledge_upload_service.py  llm_service.py  mock_llm_service.py  object_storage.py  permission_service.py  permission_types.py  rag_embedding.py  rag_service.py  session_query_service.py  task_service.py  unit_of_work.py  user_import_service.py  user_service.py  vector_index_service.py  workspace_service.py
backend/tasks/: __init__.py  knowledge_tasks.py  llm_tasks.py  worker_healthcheck.py
backend/utils/: decorators.py  file_parser.py  tokenizer.py
backend/workflow/: chat_nonstream_workflow.py  chat_workflow.py  knowledge_rag_workflow.py  knowledge_upload_workflow.py
configs/access/: permissions.yaml
configs/app/: base.yaml  local.yaml  prod.yaml  test.yaml
configs/llm/: models.yaml  prompts.yaml
deploy/: docker-compose.db.yml  docker-compose.override.yml  docker-compose.yml  patch.json  patch.py
deploy/logging/: vector-db.yaml  vector.yaml
deploy/monitoring/: alert_rules.yml  grafana_dashboards_provisioning.yaml  grafana_datasources.yaml  grafana_datasources_db.yaml  loki-config.yaml  observability.env.template  otel-collector-db.yml  prometheus-db.yml  prometheus.yml
deploy/nginx/: project.conf
deploy/scripts/: pgsql_backup.sh
docs/: async-default-style.md  automation-standard.md  backend-interface-style.md  dev-test-flow.md  todo-storage-column-types.md  ty-typecheck-notes.md
evals/: README.md  common.py  dataset.sample.jsonl  eval_rag_answer.py  eval_retrieval.py
frontend/: ARCHITECTURE.md  MIGRATION_PLAN.md  pnpm-lock.yaml
logs/: application.log.2026-01-12  application.log.2026-01-13  application.log.2026-01-16  application.log.2026-01-17  application.log.2026-01-19  application.log.2026-01-21  application.log.2026-01-22  application.log.2026-01-23  error.log.2026-01-11  error.log.2026-01-12
nginx/: project.conf
redis/: init_redis.py
scripts/diagnostics/: check_ai_env.py  debug_imports.py
scripts/flow/: dev_check.sh
scripts/image/: build_backend.sh
scripts/lib/: common.sh
scripts/prompts/: pull_from_langfuse.py
scripts/qa/: run_checks.sh  run_integration.sh  run_unit.sh
scripts/seed/: dev_seed.py
scripts/smoke/: create_kb.py  create_kb.sh  down.sh  prepare_env.sh  test.sh  up.sh  wait.sh
tests/: README.md  api_tests.http  conftest.py  debug_imports.py  locustfile.py  stress_test_concurrency.py  stress_test_workflow_concurrency.py  test_demo.py  test_pytorch.py  verify_idempotency_tokens.py  verify_minimal.py
tests/integration/: conftest.py  taskiq_test_tasks.py  test_chat_api.py  test_http_infra.py  test_taskiq_integration.py  test_user_api.py
tests/manual/: admin_permission_flow.http
tests/performance/: locust_report.html  locustfile.py  test_llm_concurrency_performance.py  test_workflow_concurrency_performance.py
tests/smoke/: _http_smoke_helpers.py  test_chat_http_smoke.py  test_idempotency_tokens_smoke.py  test_knowledge_http_smoke.py  test_minimal_smoke.py  test_rag_http_smoke.py
tests/unit/: test_chat_repo.py  test_chat_service.py  test_chat_workflow_memory.py  test_eval_rag_answer_helpers.py  test_evals_common.py  test_llm_service.py  test_prompt_manager.py  test_rag_embedding.py  test_repo.py  test_service.py
tools/diagnostics/: check_pytorch_env.py
(+125 files in other folders)
