[project]
name = "mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi>=0.128.0",
    "ollama>=0.6.1",
    "openai>=2.21.0",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "python-ulid>=3.1.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[tool.ruff]
# 1. 设置行宽限制（PEP 8 建议 79，但现代开发通常用 88 或 100）
line-length = 88

# 2. 指定要检查的规则包
# E/W: PEP 8
# F: Pyflakes (基础错误)
# B: Bugbear (代码陷阱)
# I: Isort (导入排序)
# UP: Pyupgrade (现代化语法)
select = ["E", "F", "B", "I", "UP"]

# 3. 指定要忽略的规则
ignore = ["E501"] # 比如忽略“行太长”的警告，因为有些 URL 确实很长

[tool.ruff.format]
# 格式化器（类似 Black）的配置
quote-style = "double"  # 使用双引号
indent-style = "space"  # 使用空格缩进
[tool.ruff.lint.flake8-bugbear]
# 允许在默认参数中调用这些函数（专门针对 FastAPI）
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "Depends",  # 如果你是从 fastapi 直接 import Depends
]

[dependency-groups]
compute = [
    "docling>=2.72.0",
    "numpy>=2.3.5",
    "sentence-transformers>=5.2.2",
]
dev = [
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
]
[tool.uvicorn]
reload_excludes = ["postgres_data/**"]
[tool.pytest.ini_options]
# 忽略特定的目录，不进行测试搜寻
pythonpath = ["."]
norecursedirs = ["data", "logs", "config", "venv","postgres_data"]
testpaths = ["tests"]
asyncio_mode = "auto"
[tool.ty]
# 1. 核心：指定 Python 版本（建议和你项目一致）
python-version = "3.11"

# 2. 严苛程度：建议开启 strict，这能帮你抓到最隐蔽的逻辑漏洞
strict = true

# 3. 环境隔离：如果你没在项目里安装 ty，告诉它去哪里找你的三方库
# 这样即使不装 ty 库，插件也能识别 FastAPI 等依赖的类型
python-executable = ".venv/bin/python"

# 4. 排除项：减少不必要的扫描
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]
